# rockverse

./: .gitignore  .readthedocs.yaml  .rtdenvironment.yaml  Changelog.md  LICENSE  LICENSE.md  README.md  backlog.md  backlog.txt  meta.yaml  pyproject.toml
.github/workflows/: build_and_upload_conda_packages.yaml  publish-to-pypi.yml
docs/source/: api.rst  conf.py  gallery.rst  gethelp.rst  getting_started.rst  index.rst  install.rst  release_notes.rst  subscribe.rst  tutorials.rst
docs/source/_static/: custom.css
docs/source/_templates/: layout.html
docs/source/api/: config.rst  core.rst  dect.rst  digitalrock.rst  dualenergyct.rst  histogram.rst  region.rst  seismic.rst  viz.rst  voxel_image.rst
docs/source/api/config/: config_class.rst  config_context.rst  working_with_GPUs.rst
docs/source/api/core/: array.rst
docs/source/api/dect/: calibrationmaterial.rst  group.rst  periodictable.rst
docs/source/api/digitalrock/: region.rst  voxel_image.rst  voxelimage.rst  voxelimage_creation.rst  voxelimage_export.rst  voxelimage_import.rst  voxelimage_math.rst
docs/source/api/digitalrock/region/: cylinder.rst  region.rst  sphere.rst
docs/source/api/digitalrock/voxel_image/: class.rst  creation.rst  math.rst  save.rst
docs/source/api/digitalrock/voxelimage/: class.rst  creation.rst  export.rst  import.rst  io.rst  math.rst
docs/source/api/dualenergyct/: calibrationmaterial.rst  finetuneperformance.rst  group.rst  periodictable.rst
docs/source/api/region/: cylinder.rst  sphere.rst
docs/source/api/seismic/: SeismicData.rst
docs/source/api/viz/: orthogonal_viewer.rst
docs/source/api/voxel_image/: VoxelImage.rst  class.rst  creation.rst  histogram.rst  math.rst  save.rst
docs/source/gallery/digitalrock/sample_data/: import_C04B21_dualenergy.ipynb  import_belgian_fieldstone.ipynb
docs/source/gallery/miscellaneous/: logo.ipynb
docs/source/getting_started/: install.rst
docs/source/tutorials/: digitalrock.rst
docs/source/tutorials/configuration/: selecting_gpu_devices.ipynb
docs/source/tutorials/digitalrock/: dual_energy.rst  orthogonal_viewer.ipynb  orthogonal_viewer.rst  voxel_image.ipynb  voxel_image.rst  voxelimages.ipynb
docs/source/tutorials/digitalrock/dual_energy/: C04B21_Pre.ipynb  C04B21_Run.ipynb  dual_energy_tutorial_download_data.ipynb  dual_energy_tutorial_performance.ipynb  dual_energy_tutorial_process.ipynb
docs/source/tutorials/digitalrock/orthogonal_viewer/: import_bentheimer_sandstone.ipynb
docs/source/tutorials/digitalrock/sample_data/: import_C04B21_dualenergy.ipynb  import_belgian_fieldstone.ipynb  import_bentheimer_sandstone.ipynb
docs/source/tutorials/digitalrock/voxel_image/: creating.ipynb
docs/source/yEd/: SeismicData.graphml
src/rockverse/: __init__.py  config.py  configure.py  errors.py  rc.py
src/rockverse/_assert/: __init__.py  condition.py  iterable.py  utils.py
src/rockverse/_utils/: __init__.py  logo.py  text.py
src/rockverse/configure/: __init__.py  latex_strings.py  orthogonal_viewer.py
src/rockverse/core/: __init__.py
src/rockverse/dect/: __init__.py  _cpu_functions.py  _gpu_functions.py  _hash_functions.py
src/rockverse/digitalrock/: __init__.py  orthogonal_slices.py
src/rockverse/digitalrock/region/: __init__.py  cylinder.py  region.py  sphere.py
src/rockverse/digitalrock/voxel_image/: __init__.py  _math.py  creation.py  histogram.py  voxel_image.py
src/rockverse/digitalrock/voxelimage/: __init__.py  _array_math.py  _finneypack.py  _math.py
src/rockverse/dualenergyct/: __init__.py  _corefunctions.py  _cpu_functions.py  _gpu_functions.py  _hash_functions.py  _periodic_table.py
src/rockverse/group/: __init__.py
src/rockverse/las/: __init__py  exceptions.py  las.py  las2.py  las3.py
src/rockverse/optimize/: __init__.py  gaussian.py
src/rockverse/plot/: orthogonal_slices.py
src/rockverse/rc/: __init__.py  orthogonal_viewer.py
src/rockverse/region/: __init__.py  cylinder.py  region.py  sphere.py
src/rockverse/seismic/: __init__.py
src/rockverse/viz/: __init__.py  orthogonal_slices.py
src/rockverse/voxel_image/: __init__.py  _finneypack.py  _math.py  creation.py  histogram.py  voxel_image.py
src/rockverse/wells/: __init__.py
tests/: C04B21_Run.ipynb  LAS2_example_1.las  LAS2_example_2.las  LAS2_example_3.las  LAS2_example_4.las  LAS2_example_5.las  LAS3_example_1.las  dual_energy.ipynb  dual_energy_bemw.ipynb  generate_logos.py  parallel_interactive.ipynb  srm.py
