[build-system]
requires = ["setuptools>=61.0", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
version_scheme = "only-version"  # Only use the version from the tag, as given

[project]

name = "rockverse"

dynamic = ["version"]

authors = [
  { name="Rodolfo A. Victor", email="rodolfo@rodolfovictor.com" },
]

description = "Python tools for Computational Petrophysics"

readme = "README.md"

requires-python = ">=3.8,<3.13"

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 1 - Planning",
]

dependencies = [
    "ipympl",
    "ipython",
    "ipyparallel",
    "ipywidgets",
    "jupyter",
    "jupyterlab",
    "matplotlib<3.10",
    "mpi4py",
    "nbsphinx",
    "numba",
    "numpy",
    "pandas",
    "pip",
    "pydata-sphinx-theme",
    "scipy<=1.13.1",
    "sphinx",
    "sphinx-copybutton",
    "sphinx-design",
    "sphinx_gallery",
    "tqdm",
    "zarr<3",
]


keywords = ["petrophysics", "well", "log", "well log", "digital rock"]

[project.urls]
Homepage = "https://rockverse.readthedocs.io/"
Documentation = "https://rockverse.readthedocs.io/"
Repository = "https://github.com/rodolfovictor/rockverse"
Issues = "https://github.com/rodolfovictor/rockverse/issues"
Changelog = "https://github.com/rodolfovictor/rockverse/blob/main/Changelog.md"
"Official Website" = "https://rockverse.readthedocs.io/"